<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="24sp" />
    <!-- Container ConstraintLayout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/first_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/app_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:id="@+id/lb_first_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lb_first_num"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:height="40dp"
            android:gravity="center"
            android:textSize="18sp" />
        <EditText
            android:id="@+id/input_first_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/lb_first_num"
            android:width="100dp"
            android:height="40dp"
            android:textSize="18sp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <!-- Container ConstraintLayout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sec_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/first_form"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:id="@+id/lb_sec_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lb_sec_num"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:height="40dp"
            android:gravity="center"
            android:textSize="18sp" />
        <EditText
            android:id="@+id/input_sec_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/lb_sec_num"
            android:width="100dp"
            android:height="40dp"
            android:textSize="18sp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <!-- Container ConstraintLayout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btn_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/sec_form"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <Button
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addBtn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textSize="18sp"/>
        <Button
            android:id="@+id/subtract_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtractBtn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/add_button"
            app:layout_constraintRight_toLeftOf="@id/multiply_button"
            android:textSize="18sp"/>
        <Button
            android:id="@+id/multiply_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multiplyBtn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/subtract_button"
            app:layout_constraintRight_toLeftOf="@id/divide_button"
            android:textSize="18sp"/>
        <Button
            android:id="@+id/divide_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/divideBtn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textSize="18sp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/result_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_form"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:id="@+id/lb_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lb_result"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:height="40dp"
            android:gravity="center"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/output_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/lb_result"
            android:width="100dp"
            android:height="40dp"
            android:gravity="center"
            android:textSize="18sp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>